# alice-skills

./: .gitignore  Data.json  Data_Kirill.json  Information_pavel.txt  README.md  form.py  git_task.py  main.py  portrait.py  pyproject.toml  questions.txt  requirements.txt  users.db  История_11_класс_Кирилл.txt  Термины  Термины.txt  для бд.py  рекордики.txt
templates/: ask.html  base.html  records.html
ВОВ Даня/: 42.json
ВОВ Паша/: ВОВ.json
Материалы/ВОВ Паша/: даты из учебника.txt
Материалы/Портреты2/: desktop.ini
