[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Daniel Khromov <danielkhromov@gmail.com>"]
description = ""
name = "alice-skills-1"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^1.1"
python = "^3.7"
gunicorn = "^20.0"
Flask-WTF = "^0.14.3"
Flask-Login = "^0.5.0"
Werkzeug = "^1.0"
wtforms = "^2.3"
schedule = "^0.6.0"
[tool.poetry.dev-dependencies]
